DesignProject/tests/error/test09.src
// wrong return type
func wrongReturn() -> integer {
    return(5.5);  // error: returning float from integer function
}

